--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,6 +24,11 @@
     -->
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
+
+  <!-- bootstrap style sheets -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+
   <link
     href="https://fonts.googleapis.com/css2?family=Cabin+Condensed&family=Carter+One&family=Sansita+Swashed:wght@600&display=swap"
     rel="stylesheet">
@@ -48,6 +53,11 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+  <!-- bootstrap script tag -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
